--- a/templates/Home.html
+++ b/templates/Home.html
@@ -39,15 +39,16 @@
     .wrap {
         width: 400px;
         margin: auto;
+        text-align: center;
     }
 
     .img {
         background-image: url('https://img1.daumcdn.net/thumb/R800x0/?scode=mtistory2&fname=https%3A%2F%2Ft1.daumcdn.net%2Fcfile%2Ftistory%2F2376DE41584F28BD14');
         background-size: cover;
         background-position: center;
-        object-fit: contain;
-        width: 750px;
-        height: 300px;
+
+        width: 700px;
+        height: auto;
     }
 
     .info {
@@ -69,8 +70,9 @@
 </style>
 <div class="wrap">
     <p>
-    <h1>미라클모닝</h1> <br>
-    <h3>미라클 모닝을 실천해보세요~~~</h3>
+    <h1 class="display-4">미라클모닝&#127774;</h1> <br>
+    <p>
+    <h4>당신의 하루를 바꾸는 기적,<br> 미라클 모닝을 실천해보세요!</h4>
     <p>
     <div class="img"></div>
     <div class="info">
@@ -80,7 +82,7 @@
     </div>
 
     <div>
-        <button type="button" class="btn btn-primary btn-lg btn-block">시작하기</button>
+        <button type="button" class="btn btn-primary btn-lg btn-block"onclick="location.href='Guide.html'">시작하기</button>
     </div>
 
     <div>
