--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -37,55 +37,42 @@
     }
 
     .wrap {
-        width: 400px;
+        width: 600px;
         margin: auto;
-        text-align: center;
-    }
-
-    .img {
-        background-image: url('https://img1.daumcdn.net/thumb/R800x0/?scode=mtistory2&fname=https%3A%2F%2Ft1.daumcdn.net%2Fcfile%2Ftistory%2F2376DE41584F28BD14');
-        background-size: cover;
-        background-position: center;
-
-        width: 700px;
-        height: auto;
-    }
-
-    .info {
-        margin-top: 20px;
-        margin-bottom: 20px;
     }
 
     h1, h5 {
         display: inline;
     }
 
-    .order {
-        text-align: center;
+    .img {
+        background-image: url('https://www.incimages.com/uploaded_files/image/1920x1080/getty_495142964_198701.jpg');
+        background-size: cover;
+        background-position: center;
+        width: 500px;
+        height: 300px;
     }
 
-    .order {
-        margin-top: 30px;
-    }
 </style>
 <div class="wrap">
     <p>
-    <h1 class="display-4">미라클모닝&#127774;</h1> <br>
+    <h1 class="display-4">Visualization(시각화)&#127774;</h1> <br>
     <p>
-    <h4>당신의 하루를 바꾸는 기적,<br> 미라클 모닝을 실천해보세요!</h4>
-    <p>
+    <div class="menu">
+        <a class="btn btn-outline-primary" href="{{ url_for('get_silencepage') }}"> Silence<br>(침묵)</a>
+        <a class="btn btn-outline-secondary" href="{{ url_for('get_affirmationpage') }}">Affirmation<br>(확신의 말)</a>
+        <a class="btn btn-success" href="{{ url_for('get_visualizationpage') }}">Visualization<br>(시각화)</a>
+        <a class="btn btn-outline-danger" href="{{ url_for('get_exercisepage') }}">Exercise<br>운동</a>
+        <a class="btn btn-outline-warning" href="{{ url_for('get_readpage') }}"> Reading<br>(독서)</a>
+        <a class="btn btn-outline-info" href="{{ url_for('get_scribingpage') }}">Scribing<br>(쓰기)</a>
+    </div>
+
+    <br>
+    <h3>오늘 완수해야 하는 중요한 과제를 시각화한다.</h3>
+    <h4>실수없이 완벽하고 깔끔하게 실행에 옮기는 모습을 이미지화한다.</h4>
+    <br>
     <div class="img"></div>
-    <div class="info">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/JxIi33rSbkg" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-    </div>
 
-    <div>
-        <button type="button" class="btn btn-primary btn-lg btn-block"onclick="location.href='Guide.html'">시작하기</button>
-    </div>
-
-    <div>
-
+</div>
 </body>
 </html>
