--- a/templates/guide.html
+++ b/templates/guide.html
@@ -59,7 +59,7 @@
     <h1 class="display-4">미라클모닝 가이드&#127774;</h1> <br>
     <p>
     <div class="menu">
-        <a class="btn btn-outline-primary" href="{{ url_for('get_silencepage') }}"> Silence<br>(침묵)</a>
+        <a class="btn btn-outline-primary" href="{{ url_for('get_silencepage') }}"> <strong>S</strong>ilence<br>(침묵)</a>
         <a class="btn btn-outline-secondary" href="{{ url_for('get_affirmationpage') }}">Affirmation<br>(확신의 말)</a>
         <a class="btn btn-outline-success" href="{{ url_for('get_visualizationpage') }}">Visualization<br>(시각화)</a>
         <a class="btn btn-outline-danger" href="{{ url_for('get_exercisepage') }}">Exercise<br>운동</a>
