--- a/templates/affirmation.html
+++ b/templates/affirmation.html
@@ -15,11 +15,8 @@
 </head>
 <body>
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
+<!-- JS -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
@@ -67,7 +64,7 @@
         // 1. 리뷰 목록을 서버에 요청하기
         $.ajax({
             type: "GET",
-            url: "/api/affirmaion",
+            url: "/api/affirmation",
             data: {},
             success: function (response) {
                 // 2. 요청 성공 여부 확인하기
@@ -75,7 +72,7 @@
                     let affirmations = response["affirmations"];
                     // 3. 요청 성공했을 때 리뷰를 올바르게 화면에 나타내기
                     for (let i = 0; i < affirmations.length; i++) {
-                        make_affirmation(affirmations[i]["title"];
+                        make_affirmation(affirmations[i]["title"])
                     }
                 } else {
                     alert("리뷰를 받아오지 못했습니다");
@@ -142,26 +139,12 @@
         <div>
             <div class="form-group">
                 <label for="post-comment">확신의 말</label>
-                <textarea id="post-comment" class="form-control" rows="4"></textarea>
+                <textarea id="post-comment" class="form-control" rows="8"></textarea>
             </div>
             <button type="button" class="btn btn-secondary" onclick="write_affirmation()">등록하기</button>
         </div>
     </div>
 
-    <div class="content">
-        <table class="table">
-            <thead>
-            <tr>
-                <th scope="col">확신의 말</th>
-            </tr>
-            </thead>
-            <tbody id="contents-box">
-            <tr>
-                <td>역시 왕초보 코딩교육의 명가답군요. 따라하다보니 눈 깜짝할 사이에 8주가 지났습니다.</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
 </div>
 
 </body>
