--- a/templates/silence.html
+++ b/templates/silence.html
@@ -146,7 +146,7 @@
                         <a href="${url}" target="_blank" class="card-title">${title}</a>
                         <p class="card-text">${desc}</p>
                         <p class="card-text comment">${comment}</p>
-                        <p><button type="button" class="btn btn-danger" onclick="delete_silence('${url}')">영상삭제</button></p>
+                        <a href="#" class="card-link" onclick="delete_silence('${url}')">삭제하기</a>
                         </div>
                     </div>`;
             $("#cards-box").append(temp_html);
@@ -202,11 +202,8 @@
                     <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
                         화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-                    <p>
-                        <button type="button" class="btn btn-danger"
-                                onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">영상삭제
-                        </button>
-                    </p>
+                    <a href="#" class="card-link"
+                       onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
                 </div>
             </div>
             <div class="card">
@@ -218,11 +215,8 @@
                     <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
                         화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-                    <p>
-                        <button type="button" class="btn btn-danger"
-                                onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">영상삭제
-                        </button>
-                    </p>
+                    <a href="#" class="card-link"
+                       onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
                 </div>
             </div>
             <div class="card">
@@ -234,11 +228,8 @@
                     <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
                         화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-                    <p>
-                        <button type="button" class="btn btn-danger"
-                                onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">영상삭제
-                        </button>
-                    </p>
+                    <a href="#" class="card-link"
+                       onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
                 </div>
             </div>
             <div class="card">
@@ -250,11 +241,21 @@
                     <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
                         화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-                    <p>
-                        <button type="button" class="btn btn-danger"
-                                onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">영상삭제
-                        </button>
-                    </p>
+                    <a href="#" class="card-link"
+                       onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top"
+                     src="https://www.eurail.com/content/dam/images/eurail/Italy%20OCP%20Promo%20Block.adaptive.767.1535627244182.jpg"
+                     alt="Card image cap">
+                <div class="card-body">
+                    <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
+                    <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
+                        화려강산...</p>
+                    <p class="card-text comment">여기에 코멘트가 들어갑니다.</p
+                    <a href="#" class="card-link"
+                       onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
                 </div>
             </div>
             <div class="card">
@@ -266,27 +267,8 @@
                     <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
                         화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-                    <p>
-                        <button type="button" class="btn btn-danger"
-                                onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">영상삭제
-                        </button>
-                    </p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top"
-                     src="https://www.eurail.com/content/dam/images/eurail/Italy%20OCP%20Promo%20Block.adaptive.767.1535627244182.jpg"
-                     alt="Card image cap">
-                <div class="card-body">
-                    <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
-                        화려강산...</p>
-                    <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-                    <p>
-                        <button type="button" class="btn btn-danger"
-                                onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">영상삭제
-                        </button>
-                    </p>
+                    <a href="#" class="card-link"
+                       onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
                 </div>
             </div>
         </div>
