--- a/templates/affirmation.html
+++ b/templates/affirmation.html
@@ -83,10 +83,13 @@
 
 
     function make_affirmation(content) {
-        let tempHtml = `<tr>
-                        <td>${content}</td>
-                    </tr>`;
-        $("#contents-box").append(tempHtml);
+        let tempHtml = `<div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                    ${content}
+                </label>
+        </div>`
+    $("#contents-box").append(tempHtml);
     }
 
 </script>
@@ -127,7 +130,6 @@
         <a class="btn btn-outline-info" href="{{ url_for('get_scribingpage') }}">Scribing<br>(쓰기)</a>
     </div>
 
-
     <br>
     <h3>가장 중요한 확신의 말을 읽는다.</h3>
     <h4>성취 목표, 목표가 중요한 이유, 실행 방안과 시기를 되새기고 다짐한다.</h4>
@@ -139,11 +141,25 @@
         <div>
             <div class="form-group">
                 <label for="post-comment">확신의 말</label>
-                <textarea id="post-comment" class="form-control" rows="8"></textarea>
+                <textarea id="post-comment" class="form-control" rows="4"></textarea>
             </div>
             <button type="button" class="btn btn-secondary" onclick="write_affirmation()">등록하기</button>
+            <br>
         </div>
     </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+            나만의 웹페이지 만들기
+        </label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+        <label class="form-check-label" for="flexCheckChecked">
+            영어회화 시작하기
+        </label>
+    </div>
+</div>
 
 </div>
 
